@@ -59,7 +59,7 @@ SystemTapOptionsTab.14=code in user script.
 SystemTapOptionsTab.15=\ Use bulk mode (percpu files) for kernel-to-user data transfer.
 SystemTapOptionsTab.16=Collect timing information on the number of times probe executes 
 SystemTapOptionsTab.17=and average amount of time spent in each probe.
-SystemTapOptionsTab.18=-v: Enable verbose mode
+SystemTapOptionsTab.18=Verbosity level (-v, -vv, -vvv)
 SystemTapOptionsTab.19=Stop after pass \#
 SystemTapOptionsTab.2=Increase verbosity for all passes.  Produce a larger  volume  of
 SystemTapOptionsTab.20=-k: Keep temporary directories
