@@ -1,3 +1,8 @@
+2011-08-11  Roland Grunberg  <rgrunber@redhat.com>
+
+	* src/org/eclipse/linuxtools/callgraph/core/LaunchConfigurationConstants.java:
+		Modify verbosity.
+
 2010-06-02  Roland Grunberg  <rgrunber@redhat.com>
 
 	* plugin.properties: Externalize some strings in the Manifest.
